--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 import(Biostrings)
 import(BSgenome)
 import(BiocGenerics)
-export(offTargetAnalysis,filterOffTarget,filterSpacers, findSpacers, 
+export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences)
