--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: CRISPRseek
 Type: Package
 Title: Design of target-specific guide RNAs in CRISPR-Cas9, genome-editing systems
-Version: 1.2.3
-Date: 2014-08-19
+Version: 1.2.4
+Date: 2014-08-20
 Author: Lihua Julie Zhu, Benjamin R. Holmes, Herve Pages, Neil Aronin and Michael Brodsky
 Maintainer: Lihua Julie Zhu <julie.zhu@umassmed.edu>
-Depends: R (>= 3.0.1), BiocGenerics, Biostrings, BSgenome
+Depends: R (>= 3.0.1), BiocGenerics, Biostrings, BSgenome, seqinr
 biocViews: GeneRegulation, SequencingMatching 
-Suggests:  RUnit, BiocStyle, BSgenome.Hsapiens.UCSC.hg19, TxDb.Hsapiens.UCSC.hg19.knownGene
+Suggests:  RUnit, BiocStyle, BSgenome.Hsapiens.UCSC.hg19, TxDb.Hsapiens.UCSC.hg19.knownGene, org.Hs.eg.db
 Description: The package includes functions to find potential guide RNAs for input target sequences, optionally filter guide RNAs without restriction enzyme cut site, or without paired guide RNAs, genome-wide search for off-targets, score, rank, fetch flank sequence and indicate whether the target and off-targets are located in exon region or not. Potential guide RNAs are annotated with total score of the top5 and topN off-targets, detailed topN mismatch sites, restriction enzyme cut sites, and paired guide RNAs. This package leverages Biostrings and BSgenome packages.
 License: GPL (>= 2)
 LazyLoad: yes
