--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,7 @@
 import(Biostrings)
 import(BSgenome)
 import(BiocGenerics)
+import(seqinr)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences)
