--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,4 @@ import(BiocGenerics)
 import(seqinr)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
-    buildFeatureVectorForScoring, compare2Sequences)
+    buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency)
