speed up offtarget annotation
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@95570 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ import(BiocGenerics)
 import(seqinr)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
-    buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency)
+    buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
+    annotateOffTargets)
