--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ import(BSgenome)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
-    annotateOffTargets, isPatternUnique,uniqueREs, foldgRNAs)
+    annotateOffTargets, isPatternUnique,uniqueREs, foldgRNAs, 
+    offTargetAnalysisOfPeakRegions)
