changed from depends to imports and fixed non-ascii characters
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@109245 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 import(Biostrings)
 import(BiocGenerics)
-import(seqinr)
+importFrom(seqinr, s2c)
 import(BSgenome)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
