enable parallel proceesing by converting lapply to parLapply
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@109360 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@ import(Biostrings)
 import(BiocGenerics)
 importFrom(seqinr, s2c)
 import(BSgenome)
+importFrom(data.table, rbindlist)
+import(BiocParallel)
+importFrom(parallel, makeCluster, stopCluster, detectCores)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
