--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: CRISPRseek
 Type: Package
 Title: Design of target-specific guide RNAs in CRISPR-Cas9, genome-editing systems
-Version: 1.11.1
-Date: 2015-11-04
-Author: Lihua Julie Zhu, Benjamin R. Holmes, Herve Pages, Isana Veksler-Lublinsky, Victor Ambros, Neil Aronin and Michael Brodsky
+Version: 1.11.3
+Date: 2015-11-06
+Author: Lihua Julie Zhu, Benjamin R. Holmes, Herve Pages, Michael Lawrence, Isana Veksler-Lublinsky, Victor Ambros, Neil Aronin and Michael Brodsky
 Maintainer: Lihua Julie Zhu <julie.zhu@umassmed.edu>
 Depends: R (>= 3.0.1), BiocGenerics, Biostrings
 Imports: seqinr, BSgenome, data.table, BiocParallel, parallel
