Speed up buildFeatureVectorForScoring() by about 40x and drop its parallel processing capabilities.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@110954 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,7 @@
-import(Biostrings)
 import(BiocGenerics)
+import(S4Vectors)
+import(IRanges)
+import(Biostrings)
 importFrom(seqinr, s2c)
 import(BSgenome)
 importFrom(data.table, rbindlist)
