added scoring method from Nature Biotechnology Jan 2016 Doench, Root etc
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@114823 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ import(BSgenome)
 importFrom(data.table, rbindlist)
 import(BiocParallel)
 importFrom(parallel, makeCluster, stopCluster, detectCores)
+import(hash)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
