--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ import(BSgenome)
 importFrom(data.table, rbindlist)
 import(BiocParallel)
 importFrom(parallel, makeCluster, stopCluster, detectCores)
-import(hash)
+importFrom(hash, values, hash)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
