fixed warning messages
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CRISPRseek@115816 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 import(BiocGenerics)
-import(S4Vectors)
-import(IRanges)
+import(S4Vectors, except=c(fold, values))
+import(IRanges, except=values)
 import(Biostrings)
 importFrom(seqinr, s2c)
 import(BSgenome)
@@ -8,6 +8,7 @@ importFrom(data.table, rbindlist)
 import(BiocParallel)
 importFrom(parallel, makeCluster, stopCluster, detectCores)
 importFrom(hash, values, hash)
+importFrom("utils", "read.csv", "read.table", "write.table")
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
