--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,7 @@ importFrom(parallel, makeCluster, stopCluster, detectCores)
 importFrom(hash, values, hash)
 importFrom("utils", "read.csv", "read.table", "write.table")
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
-    searchHits, writeHits, translatePattern, getOfftargetScore, 
+    searchHits2, writeHits2, searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
     annotateOffTargets, isPatternUnique,uniqueREs, foldgRNAs, 
     offTargetAnalysisOfPeakRegions)
