--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,8 @@ Type: Package
 Title: Design of target-specific guide RNAs in CRISPR-Cas9, genome-editing systems
 Version: 1.19.1
 Date: 2018-03-26
-Author: Lihua Julie Zhu, Benjamin R. Holmes, Herve Pages, Michael Lawrence, Isana Veksler-Lublinsky, Victor Ambros, Neil Aronin and Michael Brodsky
+Encoding: UTF-8
+Author: Lihua Julie Zhu, Benjamin R. Holmes, Hervé Pagès, Michael Lawrence, Isana Veksler-Lublinsky, Victor Ambros, Neil Aronin and Michael Brodsky
 Maintainer: Lihua Julie Zhu <julie.zhu@umassmed.edu>
 Depends: R (>= 3.0.1), BiocGenerics, Biostrings
 Imports: parallel, data.table, seqinr, S4Vectors (>= 0.9.25), IRanges, BSgenome, BiocParallel, hash
