added gRNA design for the base editor system

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 import(BiocGenerics)
+importFrom(methods, as)
 import(S4Vectors, except=c(fold, values))
 import(IRanges, except=values)
 import(Biostrings)
