--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,10 @@ import(BiocParallel)
 importFrom(parallel, makeCluster, stopCluster, detectCores)
 importFrom(hash, values, hash)
 importFrom("utils", "read.csv", "read.table", "write.table")
+import(reticulate)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits2, writeHits2, searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
-    annotateOffTargets, isPatternUnique,uniqueREs, offTargetAnalysisWithoutBSgenome
+    annotateOffTargets, isPatternUnique,uniqueREs, offTargetAnalysisWithoutBSgenome,
+    predictRelativeFreqIndels
     )
