--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,8 @@ import(BiocParallel)
 importFrom(parallel, makeCluster, stopCluster, detectCores)
 importFrom(hash, values, hash)
 importFrom("utils", "read.csv", "read.table", "write.table")
-import(reticulate)
+importFrom(reticulate, py_config, py_available, py_module_available, source_python)
+importFrom(rhdf5, H5Fopen, h5write, h5createFile, h5closeAll)
 export(offTargetAnalysis,filterOffTarget,filtergRNAs, findgRNAs, 
     searchHits2, writeHits2, searchHits, writeHits, translatePattern, getOfftargetScore, 
     buildFeatureVectorForScoring, compare2Sequences, calculategRNAEfficiency,
