added more unit tests and fixed a bug in deepCpf1

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ importFrom(data.table,as.data.table)
 importFrom(dplyr,ends_with)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(hash,hash)
 importFrom(hash,values)
 importFrom(methods,as)
