--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,10 @@ Package: CRISPRseek
 Type: Package
 Title: Design of target-specific guide RNAs in CRISPR-Cas9,
         genome-editing systems
-Version: 1.35.0
-Date: 2021-08-12
+Version: 1.35.1
+Date: 2021-11-22
 Encoding: UTF-8
-Author: Lihua Julie Zhu, Paul Scemama, Benjamin R. Holmes, Hervé Pagès, Hui Mao, Michael Lawrence, Isana Veksler-Lublinsky, Victor Ambros, Neil Aronin and Michael Brodsky
+Author: Lihua Julie Zhu, Paul Scemama, Benjamin R. Holmes, Hervé Pagès, Kai Hu, Hui Mao, Michael Lawrence, Isana Veksler-Lublinsky, Victor Ambros, Neil Aronin and Michael Brodsky
 Maintainer: Lihua Julie Zhu <julie.zhu@umassmed.edu>
 Depends: R (>= 3.5.0), BiocGenerics, Biostrings
 Imports: parallel, data.table, seqinr, S4Vectors (>= 0.9.25), IRanges,
