--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,10 +12,10 @@ Imports: parallel, data.table, seqinr, S4Vectors (>= 0.9.25), IRanges,
         BSgenome, hash, methods,reticulate,rhdf5,XVector, DelayedArray,
         GenomeInfoDb, GenomicRanges, dplyr, keras, mltools
 Suggests: RUnit, BiocStyle, BSgenome.Hsapiens.UCSC.hg19,
-        TxDb.Hsapiens.UCSC.hg19.knownGene, org.Hs.eg.db
-Description: The package includes functions to find potential guide RNAs for the CRISPR editing system including Base Editors and the Prime Editor for input target sequences, optionally filter guide RNAs without restriction enzyme cut site, or without paired guide RNAs, genome-wide search for off-targets, score, rank, fetch flank sequence and indicate whether the target and off-targets are located in exon region or not. Potential guide RNAs are annotated with total score of the top5 and topN off-targets, detailed topN mismatch sites, restriction enzyme cut sites, and paired guide RNAs. The package also output indels and their frequencies for Cas9 targeted sites. 
+        TxDb.Hsapiens.UCSC.hg19.knownGene, org.Hs.eg.db, BSgenome.Mmusculus.UCSC.mm10, TxDb.Mmusculus.UCSC.mm10.knownGene, org.Mm.eg.db, lattice, MASS, tensorflow, testthat
+Description: The package includes functions to find potential guide RNAs for the CRISPR editing system including Base Editors and the Prime Editor for input target sequences, optionally filter guide RNAs without restriction enzyme cut site, or without paired guide RNAs, genome-wide search for off-targets, score, rank, fetch flank sequence and indicate whether the target and off-targets are located in exon region or not. Potential guide RNAs are annotated with total score of the top5 and topN off-targets, detailed topN mismatch sites, restriction enzyme cut sites, and paired guide RNAs. The package also output indels and their frequencies for Cas9 targeted sites.
 License: GPL (>= 2)
 LazyLoad: yes
 biocViews: ImmunoOncology, GeneRegulation, SequenceMatching, CRISPR
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 NeedsCompilation: no
