update roxygen notations, rerun roxygen2 to update NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,12 +93,16 @@ importFrom(parallel,clusterExport)
 importFrom(parallel,detectCores)
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
+importFrom(reticulate,conda_create)
+importFrom(reticulate,conda_install)
+importFrom(reticulate,conda_list)
 importFrom(reticulate,install_miniconda)
 importFrom(reticulate,py_available)
 importFrom(reticulate,py_config)
 importFrom(reticulate,py_discover_config)
 importFrom(reticulate,py_install)
 importFrom(reticulate,py_module_available)
+importFrom(reticulate,py_run_string)
 importFrom(reticulate,source_python)
 importFrom(reticulate,use_condaenv)
 importFrom(rhdf5,H5Fopen)
